gccida/c0/init_flow
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_flow/src/cfg.c:597:6: error: use of undeclared identifier 'init_flow_initialized'
if ( init_flow_initialized ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_flow/src/cfg.c:635:1: error: use of undeclared identifier 'init_flow_initialized'
init_flow_initialized = 1; 
^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_flow/src/obj/cfg.o] Error 1
